refactor: use explicit preview subdomain URL instead of Cloudflare alias output for deployment comments
Replace dynamic `steps.cloudflare.outputs.alias` with explicit `https://preview.{project-name}.pages.dev` URL format in util comment command. Ensures consistent preview URL format across all PR deployment comments regardless of Cloudflare's alias output behavior.

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -97,7 +97,7 @@ jobs:
             --project ${{ inputs.project-name }} \
             --status ${{ steps.cloudflare.outcome == 'success' && 'success' || 'failure' }} \
             --preview-url "${{ steps.cloudflare.outputs.url }}" \
-            --alias-url "${{ steps.cloudflare.outputs.alias }}" \
+            --alias-url "https://preview.${{ inputs.project-name }}.pages.dev" \
             --commit "${{ github.event.pull_request.head.sha }}" \
             --run-url "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
       
