--- a/.github/workflows/DOCS-21-DEV.yml
+++ b/.github/workflows/DOCS-21-DEV.yml
@@ -1,15 +1,10 @@
 name: docs-21-dev
 
 on:
-  pull_request:
-    types:
-      - closed
-      - opened
-      - synchronize
-      - reopened
+  push:
     branches:
       - 'main'
-    paths:
+    paths: &paths
       - '.github/workflows/generate-docc.yml'
       - '.github/workflows/deploy-cloudflare.yml'
       - '.github/workflows/DOCS-21-DEV.yml'
@@ -20,8 +15,12 @@ on:
       - 'Sources/util/**'
       - 'Package.swift'
       - 'Package.resolved'
-  
-  # Allows you to run this workflow manually from the Actions tab
+
+  pull_request:
+    branches:
+      - 'main'
+    paths: *paths
+
   workflow_dispatch:
 
 jobs:
@@ -39,7 +38,7 @@ jobs:
     with:
       artifact-name: ${{ needs.generate.outputs.artifact-name }}
       project-name: docs-21-dev
-      deploy-to-production: ${{ github.event.pull_request.merged || false }}
+      deploy-to-production: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     secrets:
       cloudflare-api-token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
       cloudflare-account-id: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
